infra/kustomize/overlays/staging/reservation-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservation-canary
spec:
  selector:
    app: reservation
    release: canary
  ports:
    - name: http
      port: 80
      targetPort: 8080
